--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,16 @@
   z-index: 0;
 }
 
+.black-overlay-30 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+
 .bg-video {
   position: absolute;
   top: 50%;
